<resources>
    <string name="app_name">NoiseDetector</string>
    <string name="password">Hasło</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="login">Zaloguj</string>
    <string name="register">Zarejestruj</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="email">Adres e-mail</string>
    <string name="male">Mężczyzna</string>
    <string name="female">Kobieta</string>
    <string name="settings">Ustawienia</string>
    <string name="start">start</string>
    <string name="stop">stop</string>

    <string name="token_key">COOKIES_KEY</string>
    <string name="refresh_token_key">refresh_token_key</string>
    <string name="email_key">EMAIL_KEY</string>
    <string name="error_occured">Wystąpił błąd</string>
    <string name="enter_username">Wprowadź nazwę użytkownika</string>
    <string name="enter_email">Wprowadź email</string>
    <string name="enter_password">Wprowadź hasło</string>
    <string name="enter_passwords">Wprowadź hasło dwukrotnie</string>
    <string name="passwords_must_be_equal">Hasła powinny być identyczne</string>
    <string name="successfully_registered">Pomyślnie zarejestrowano</string>
</resources>
